test/end-to-end/parse-errors/params-missing-end.crow
f string(
	x

g nat(x nat)
	x
